- Added profile screen - Added Share key dialog - Started adding create profile screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 accompanistSystemuicontroller = "0.31.4-beta"
 agp = "8.7.0-rc01"
 coilCompose = "3.1.0"
+core = "3.5.1"
 datastorePreferencesCore = "1.1.2"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
@@ -13,9 +14,10 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.0"
 composeBom = "2025.01.01"
 androidxMaterialIconsExtended = "1.7.7"
-navigationCompose = "2.8.6"
+navigationCompose = "2.8.7"
 protobufGradlePlugin = "0.9.4"
 protobufJavalite = "3.18.0"
+retrofit = "2.9.0"
 roomRuntime = "2.6.1"
 lifecycleLivedataKtx = "2.8.7"
 
@@ -30,6 +32,9 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+zxing = { module = "com.google.zxing:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
