--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".JAEMApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
