--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 accompanistSystemuicontroller = "0.31.4-beta"
 activityKtx = "1.10.1"
-agp = "8.7.0-rc01"
+agp = "8.7.3"
 androidImageCropper = "4.5.0"
 bcprovJdk15on = "1.70"
 coilCompose = "3.1.0"
 composefilepicker = "1.0.6"
 core = "3.5.1"
-datastorePreferencesCore = "1.1.2"
+datastorePreferencesCore = "1.1.3"
 hiltAndroidCompiler = "2.51.1"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.0"
@@ -18,13 +18,15 @@ espressoCore = "3.6.1"
 kotlinxCollectionsImmutable = "0.3.8"
 kotlinxSerializationJson = "1.6.3"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
-composeBom = "2025.01.01"
-androidxMaterialIconsExtended = "1.7.7"
-navigationCompose = "2.8.7"
+activityCompose = "1.10.1"
+composeBom = "2025.02.00"
+androidxMaterialIconsExtended = "1.7.8"
+navigationCompose = "2.8.8"
+pagingCompose = "3.3.6"
 protobufGradlePlugin = "0.9.4"
 protobufJavalite = "3.18.0"
 retrofit = "2.9.0"
+retrofit2KotlinxSerializationConverter = "1.0.0"
 roomRuntime = "2.6.1"
 lifecycleLivedataKtx = "2.8.7"
 junitJupiter = "5.8.1"
@@ -43,8 +45,11 @@ androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-com
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-material-icons-extended-v131 = { module = "androidx.compose.material:material-icons-extended", version.ref = "androidxMaterialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingCompose" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 bcpkix-jdk15on = { module = "org.bouncycastle:bcpkix-jdk15on", version.ref = "bcprovJdk15on" }
@@ -56,6 +61,7 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltA
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidCompiler" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2KotlinxSerializationConverter" }
 tika-core = { module = "org.apache.tika:tika-core", version.ref = "tikaCore" }
 zxing = { module = "com.google.zxing:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
